<resources>
    <string name="app_name">Taxi_app</string>
    <!-- All app strings. -->
    <string name="toast_data_update">Данные обновлены</string>
    <string name="btn_text_further">Далее</string>
    <!-- Enter phone. -->
    <string name="enter_phone_text_view_description_text">Номер телефона</string>
    <string name="enter_phone_text_view_description_text_two">На него мы отправим код подтверждения</string>
    <string name="enter_phone_text_view_phone_number_hint">+380123456789</string>
    <!-- Enter code. -->
    <string name="enter_code_text_view_description_text">Код</string>
    <string name="enter_code_text_view_description_text_two">На ваш номер телефона отправлен код</string>
    <!-- Change user data strings. -->
    <string name="change_name_enter_name_description_hint">Ведите имя</string>
    <string name="change_user_name_edt_name_hint">Как вас зовут?</string>
    <string name="change_user_name_is_successful_toast">Имя успешно обновлено</string>
    <string name="change_user_name_fill_name_toast">Заполните поле имя</string>
    <string name="change_email_enter_email_description_hint">Ведите электроную почту</string>
    <string name="change_user_email_edt_name_hint">example@gmail.com</string>
    <string name="change_user_email_is_successful_toast">E-mail успешно добавлен</string>
    <string name="change_user_email_fill_email_toast">Заполните поле e-mail</string>
    <string name="change_user_data_save_btn_text">Сохранить</string>
    <!-- Profile user strings. -->
    <string name="profile_description_text_view">Профиль</string>
    <string name="profile_exit_btn_text">Выйти из профиля</string>
    <string name="profile_text_view_description_name">Имя</string>
    <string name="profile_text_view_description_email">E-mail</string>
    <string name="profile_text_view_description_phone_number">Номер телефона</string>
    <string name="profile_text_view_description_name_name">Введите имя</string>
    <string name="profile_text_view_description_email_email">Введите E-mail</string>
    <!-- Pay method user strings. -->
    <string name="pay_method_description_text_view">Способ оплаты</string>
    <string name="pay_method_text_view_cash">Наличные</string>
    <string name="pay_method_text_view_g_pay">Google pay</string>
    <string name="pay_method_text_view_card">Карта</string>
    <!--Become driver strings. -->
    <string name="become_driver_description_text_view">Стать водителем</string>
    <string name="become_driver_data_send_btn_text">Отправить заявку</string>
    <string name="become_driver_text_view_description_name">Имя</string>
    <string name="become_driver_text_view_description_name_name">Введите имя</string>
    <string name="become_driver_text_view_description_surname">Отчество</string>
    <string name="become_driver_text_view_description_surname_surname">Введите отчество</string>
    <string name="become_driver_text_view_description_last_name">Фамилия</string>
    <string name="become_driver_text_view_description_last_name_last_name">Введите фамилию</string>
    <string name="become_driver_text_view_description_car">Автомобиль</string>
    <string name="become_driver_text_view_description_car_car">Введите наименование авто</string>
    <string name="become_driver_text_view_description_car_number">Номер автомобиля</string>
    <string name="become_driver_text_view_description_car_number_car_number">Введите номер авто</string>
    <string name="become_driver_text_view_description_photo">Фото</string>
    <string name="become_driver_text_view_description_photo_photo">Фото авто, вод. удостоверения</string>
    <string name="become_driver_name_fill_name_toast">Заполните поле имя</string>
    <string name="become_driver_surname_fill_name_toast">Заполните поле отчество</string>
    <string name="become_driver_car_number_fill_name_toast">Заполните поле номер авто</string>
    <string name="become_driver_car_fill_name_toast">Заполните поле данные об авто</string>
    <string name="become_driver_last_name_fill_name_toast">Заполните поле фамилия</string>
    <string name="become_driver_name_is_successful_toast">Имя успешно добавлено</string>
    <string name="become_driver_surname_is_successful_toast">Отчество успешно добавлено</string>
    <string name="become_driver_car_number_is_successful_toast">Номер авто успешно добавлен</string>
    <string name="become_driver_car_is_successful_toast">Данные об авто добавлены</string>
    <string name="become_driver_last_name_is_successful_toast">Фамилия успешно добавлено</string>
    <string name="become_driver_photo_text_view_description_add_photo">Добавьте фото</string>
    <string name="become_driver_photo_text_view_photo_car_description">Фото авто</string>
    <string name="become_driver_photo_text_view_photo_driver_description">Ваше фото</string>
    <string name="become_driver_photo_text_view_photo_license_description">Фото вод. удостоверенея</string>
    <string name="become_driver_toast_orders_done">Заявка отправлена</string>
    <!--Help strings. -->
    <string name="help_description_text_view">Служба поддержки</string>
    <!--Enter phone and code string. -->
    <string name="enter_code_fragment_btn_enter">Далее</string>
    <!-- Pay Method string -->
    <string name="pay_method_add_credit_card_btn_text">Добавить карту</string>
    <string name="enter_phone_text_view_code_hint">123456</string>
</resources>