<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screens.ProfileFragment">

    <TextView
        android:id="@+id/profile_description_text_view"
        style="@style/text_view_upper_text"
        android:layout_marginVertical="60dp"
        android:text="@string/profile_description_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_phone_number_user_text_view_description"
        style="@style/profile_text_view_description_data"
        android:text="@string/profile_text_view_description_phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_description_text_view" />

    <TextView
        android:id="@+id/profile_phone_number_user_text_view"
        style="@style/profile_text_view_data_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_phone_number_user_text_view_description" />

    <TextView
        android:id="@+id/profile_name_user_text_view_description"
        style="@style/profile_text_view_description_data"
        android:text="@string/profile_text_view_description_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_phone_number_user_text_view" />

    <TextView
        android:id="@+id/profile_name_user_text_view"
        style="@style/profile_text_view_data_user"
        android:hint="@string/profile_text_view_description_name_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:drawableEndCompat="@drawable/ic_baseline_navigate_next_24"
        app:layout_constraintTop_toBottomOf="@id/profile_name_user_text_view_description" />

    <TextView
        android:id="@+id/profile_email_user_text_view_description"
        style="@style/profile_text_view_description_data"
        android:text="@string/profile_text_view_description_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_name_user_text_view" />

    <TextView
        android:id="@+id/profile_email_user_text_view"
        style="@style/profile_text_view_data_user"
        android:hint="@string/profile_text_view_description_email_email"
        app:drawableEndCompat="@drawable/ic_baseline_navigate_next_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_email_user_text_view_description" />

    <TextView
        android:id="@+id/profile_exit_btn"
        style="@style/profile_btn_text_exit_style"
        android:text="@string/profile_exit_btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>