<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.screens.auth.EnterPhoneNumberFragment">

    <TextView
        android:id="@+id/enter_phone_text_view_description"
        style="@style/change_user_data_text_view_description_style"
        android:text="@string/enter_phone_text_view_description_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/enter_phone_text_view_description_two"
        style="@style/enter_phone_code_description_text"
        android:text="@string/enter_phone_text_view_description_text_two"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enter_phone_edt_text"
        android:layout_width="match_parent"
        style="@style/change_user_data_edt_text_style"
        android:maxLength="13"
        android:hint="@string/enter_phone_text_view_phone_number_hint"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_phone_text_view_description_two" />

    <Button
        android:id="@+id/enter_phone_btn_further"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/change_user_data_btn_style"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/enter_code_fragment_btn_enter"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>