<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.screens.PayMethodFragment">

    <TextView
        android:id="@+id/pay_method_description_text_view"
        style="@style/text_view_upper_text"
        android:layout_marginVertical="60dp"
        android:text="@string/pay_method_description_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pay_method_description_text_view">

        <LinearLayout
            android:id="@+id/pay_method_text_view_cash"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_cash"/>

            <TextView
                style="@style/text_view_pay_method_style"
                android:text="@string/pay_method_text_view_cash"/>

        </LinearLayout>

        <View
            style="@style/underline_style"/>

        <LinearLayout
            android:id="@+id/pay_method_text_view_g_pay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_google_pay"/>

            <TextView
                style="@style/text_view_pay_method_style"
                android:text="@string/pay_method_text_view_g_pay"/>

        </LinearLayout>

        <View
            style="@style/underline_style"/>

        <LinearLayout
            android:id="@+id/pay_method_text_view_card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_credit_card"/>

            <TextView
                style="@style/text_view_pay_method_style"
                android:text="@string/pay_method_text_view_card"/>

        </LinearLayout>

        <View
            style="@style/underline_style"/>

    </LinearLayout>

    <Button
        android:id="@+id/pay_method_add_credit_card_btn"
        style="@style/change_user_data_btn_style"
        android:text="@string/pay_method_add_credit_card_btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>