<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.screens.become_driver.BecomeDriverLicensePhotoFragment">

    <TextView
        android:id="@+id/become_driver_photo_description"
        style="@style/change_user_data_text_view_description_style"
        android:text="@string/become_driver_photo_text_view_description_add_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/become_driver_photo_license_text_view_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginVertical="20dp"
        app:layout_constraintBottom_toTopOf="@+id/become_driver_photo_license_btn_save_changes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/become_driver_photo_description">

        <TextView
            style="@style/profile_text_view_description_data"
            android:text="@string/become_driver_photo_text_view_photo_license_description" />

        <ImageView
            android:id="@+id/photo_license_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/become_driver_photo_image_background" />

    </LinearLayout>

    <Button
        android:id="@+id/become_driver_photo_license_btn_save_changes"
        style="@style/change_user_data_btn_style"
        android:text="@string/btn_text_further"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>